docs/api/qiskit/0.25/qiskit.opflow.evolutions.TrotterizationBase.mdx
---
title: TrotterizationBase (v0.25)
description: API reference for qiskit.opflow.evolutions.TrotterizationBase in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.evolutions.TrotterizationBase
---

<span id="qiskit-opflow-evolutions-trotterizationbase" />

# qiskit.opflow\.evolutions.TrotterizationBase

<Class id="qiskit.opflow.evolutions.TrotterizationBase" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/opflow/evolutions/trotterizations/trotterization_base.py" signature="TrotterizationBase(reps=1)" modifiers="class">
  A base for Trotterization methods, algorithms for approximating exponentiations of operator sums by compositions of exponentiations.

  ### \_\_init\_\_

  <Function id="qiskit.opflow.evolutions.TrotterizationBase.__init__" signature="__init__(reps=1)">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                     |                                                                                                                 |
  | ----------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.opflow.evolutions.TrotterizationBase.__init__ "qiskit.opflow.evolutions.TrotterizationBase.__init__")(\[reps]) | Initialize self.                                                                                                |
  | [`convert`](#qiskit.opflow.evolutions.TrotterizationBase.convert "qiskit.opflow.evolutions.TrotterizationBase.convert")(operator)   | Convert a `SummedOp` into a `ComposedOp` or `CircuitOp` representing an approximation of e^-i\*\`\`op\_sum\`\`. |

  ## Attributes

  |                                                                                                                |                                                                                               |
  | -------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- |
  | [`reps`](#qiskit.opflow.evolutions.TrotterizationBase.reps "qiskit.opflow.evolutions.TrotterizationBase.reps") | The number of repetitions to use in the Trotterization, improving the approximation accuracy. |

  ### convert

  <Function id="qiskit.opflow.evolutions.TrotterizationBase.convert" signature="convert(operator)" modifiers="abstract">
    Convert a `SummedOp` into a `ComposedOp` or `CircuitOp` representing an approximation of e^-i\*\`\`op\_sum\`\`.

    **Parameters**

    **operator** (`OperatorBase`) – The `SummedOp` to evolve.

    **Return type**

    `OperatorBase`

    **Returns**

    The Operator approximating op\_sum’s evolution.

    **Raises**

    **TypeError** – A non-SummedOps Operator is passed into `convert`.
  </Function>

  ### reps

  <Attribute id="qiskit.opflow.evolutions.TrotterizationBase.reps">
    The number of repetitions to use in the Trotterization, improving the approximation accuracy.

    **Return type**

    `int`
  </Attribute>
</Class>

